# -research_flower

./: .gitignore  IID_df_1.csv  IID_df_2.csv  IID_m.json  NON_IID_1.csv  Non_iid_m.json  README.md  best_model.pth  cl2_n.ipynb  cl_1dp.py  cl_2dp.py  cl_n.ipynb  client_1.py  client_2.py  client_paill_1.py  client_paill_2.py  data_eng.ipynb  data_split.ipynb  df_1.csv  df_2.csv  glob_model.ipynb  met_.json  metrics_2.json  metrics_client_1.txt  private_key.pkl  public_key.pkl  pyproject.toml  save_helpers.py  server.py  server_n.ipynb  tasks.py  test_glob.csv
.ipynb_checkpoints/: data_split-checkpoint.ipynb
FedAvg/: cl2_n.ipynb  cl_n.ipynb  server_n.ipynb  tasks.py
FedAvg/test/: result.txt  result2.txt
data_eng/: data_eng.ipynb
datas/: IID_df_1.csv  IID_df_2.csv  Non_IID_1.csv  Non_IID_2.csv
fed_env/: client_1.py  client_1_torch.py  client_2.py  client_2_torch.py  fed_engine.py  fed_tasks.py  fed_tasks_sklearn.py  fed_tasks_torch.py  server.py  server_fed_prox.py  strategy.py
fed_env/clients/: client_paill_1.py
fed_env/results/: iid.json  metrics_iid.json  non_iid_fl.json  noniid.json  server_metrics.json  server_metrics_noniid.json
gen_keys/: keys.py
local_env/: local_engine.py  local_tasks.py  models.py
local_env/results/: iid_res.json  non_iid_res.json
results/: IID_m.json  Non_iid_m.json  metrics.json  metrics_2.1.json  metrics_2.2.json  metrics_2.json  plot.ipynb  plot_results.ipynb
tests_results/: metrics.json  plot_results.ipynb
