[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sklearnexample"
version = "1.0.0"

description = "Federated learning with scikit-learn and Flower"

dependencies = [
    "flwr[simulation]>=1.8.0",
    "numpy<2.0.2",
    "scikit-learn~=1.4.1.post1",
]

[tool.hatch.build.targets.wheel]
packages = ["."]


[tool.flwr.app.components]
serverapp = "sklearnexample.server_app:app"
clientapp = "sklearnexample.client_app:app"

[tool.flwr.app.config]
penalty = "l2"
num-server-rounds = 3
fraction-fit = 0.5

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10